[package]
name = "paneflow-app"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[[bin]]
name = "paneflow"
path = "src/main.rs"

[dependencies]
# GPUI framework — pinned to a minimal Paneflow fork of Zed while
# prd-markdown-append-fix-2026-Q3.md (US-021 of cli-hardening-followup
# 2026-Q3) is in flight. The fork branch carries ONE additive patch on
# `crates/markdown/src/markdown.rs` (Markdown::append amortised via a
# private String buffer, ~38x throughput on the streaming hot path)
# plus a `crates/markdown/benches/append_throughput.rs` criterion bench.
# 9 downstream Zed consumers compile unchanged on the patched fork.
#
# Switchover: when the upstream PR merges into zed-industries/zed, swap
# the `branch =` clause back to `rev = "<merge_sha>"` against
# zed-industries/zed (see prd-markdown-append-fix-2026-Q3.md Switchover
# Plan in Technical Considerations). All eight git-dep entries below
# share the same source so cargo collapses them to a single workspace
# graph.
# To bump within the fork: `git -C ~/dev/zed-paneflow-fork pull
# --rebase` then `cargo update`.
#
# `gpui_platform` MUST carry the `font-kit` feature on macOS — without it,
# `gpui_macos` compiles cleanly but the optional `zed-font-kit` dep + Core
# Text glyph rasterization path are excluded (gated on `dep:font-kit` in
# `gpui_macos/Cargo.toml`). The visible symptom is the v0.2.12 "boxes
# drawn, no glyphs" bug: fonts register via `add_fonts()`, `font_id`
# resolves PRIMARY MATCH, the window opens, SVG icons + cursor quads
# paint correctly, but every text glyph rasterizes as an empty bitmap.
# Zed enables this feature explicitly in `zed/crates/zed/Cargo.toml`.
# The feature is a no-op on Linux/Windows (where `gpui_macos` isn't
# compiled in), so it's safe in the cross-platform default declaration
# below — the Linux-only override on line ~97 adds wayland/x11 on top.
gpui = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix" }
gpui_platform = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix", features = ["font-kit"] }
collections = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix" }

# Zed markdown rendering pipeline + design-system primitives. Pinned at the
# same rev as gpui so the workspace graph resolves consistently. Pulls ~51
# Zed workspace crates transitively (language/theme/ui/lsp/...) — accepted
# trade-off for visual parity with Zed's agent panel.
markdown = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix" }
# Bootstraps Zed's `GlobalTheme` at startup. `MarkdownElement::paint` reads
# `cx.theme().colors()` unconditionally for secondary chrome (borders, panel
# backgrounds, etc.) regardless of the `MarkdownStyle` we pass in, so the
# global must exist. `theme::init(LoadThemes::JustBase, cx)` is the minimal
# bootstrap — no JSON theme bundles, no `theme_settings` integration.
theme = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix" }
# Zed's design-system primitives (Icon + IconName, Disclosure, Label, ...).
# Pinned at the same rev as gpui/markdown/theme. Required so the agent-panel
# thinking + tool-call rows match Zed's exact rendering (`Icon::new(IconName::
# ToolSearch).size(IconSize::Small).color(Color::Muted)` etc.) instead of
# hand-rolled svg() paths.
ui = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix" }

# Alacritty terminal emulation (upstream crates.io — migrated from Zed fork in US-005)
alacritty_terminal = "0.26"

# Internal crates
paneflow-config = { path = "../crates/paneflow-config" }
# US-001..US-005 of tasks/prd-agents-view.md: ACP wrappers + discovery +
# auth-required parsing live in their own crate so the heavy
# agent-client-protocol dep does not bleed into every src-app module.
paneflow-acp = { path = "../crates/paneflow-acp" }
# US-003: telemetry plumbing extracted to its own workspace crate so future
# `paneflow-trust` member can emit events without pulling the desktop binary
# into its dep graph.
paneflow-telemetry = { workspace = true }
# EP-002 (prd-mcp-bridge-distribution): GPU-free install engine behind
# `paneflow mcp install|uninstall|status`. Kept in its own crate so its
# `toml_edit` dep stays out of the size-budgeted embedded `paneflow-mcp`
# bridge binary (PRD decision D3).
paneflow-mcp-install = { path = "../crates/paneflow-mcp-install" }
# EP-002 (prd-ultron-remediation): std-only bounded-subprocess primitive
# (`run_with_timeout`) adopted at every external-process call site (self-update,
# git, opencode, mcp-install) so a hung tool can't wedge a worker.
paneflow-process = { workspace = true }
# EP-001 (prd-cli-agent-orchestration): the shared blocking JSON-RPC client the
# `paneflow <verb>` CLI subcommands use to drive a RUNNING instance over the
# existing IPC socket and exit before any GPUI init.
paneflow-ipc-client = { workspace = true }

# File system watcher (OS-native: inotify/FSEvents/ReadDirectoryChanges)
notify = "7"

# Hot-path Mutex / RwLock without poisoning, ~2x faster than std under
# contention. Used for the theme cache that's hit several times per
# render frame; std::sync::Mutex was the dominant lock in the agents
# UI hot path under streaming output. Already a transitive dep via
# gpui/tokio; making it explicit lets us reference it directly.
parking_lot = "0.12"

# TOML reader/writer for the Codex CLI's `~/.codex/config.toml`. Used by the
# composer to mirror the model + reasoning-effort fields into the live pill
# selectors (same bridge pattern as the JSON one for Claude Code's
# `~/.claude/settings.json`).
toml = "0.8"

# Standard deps
anyhow = "1.0.86"
# EP-001 (prd-cli-agent-orchestration): argument parser for the `paneflow <verb>`
# CLI surface. `Option<Commands>` keeps "no subcommand => launch the GUI" as the
# default; the `mcp`/`--update-and-exit`/`--help`/`--version` intercepts stay
# manual and run before clap so it never eats their flags.
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
# US-016 (prd-agents-view.md): the ACP SDK (paneflow-acp) is tokio-
# native. The agents runtime spawns a dedicated current-thread tokio
# runtime on a background OS thread so it never blocks GPUI's smol
# event loop. `rt` + `macros` are enough for the runtime + the
# `agent-client-protocol` futures the SDK relies on.
tokio = { version = "1", features = ["rt", "macros", "io-util", "sync", "time"] }
tracing = "0.1"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
env_logger = "0.11"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rust-embed = { version = "8.11", features = ["include-exclude"] }
smol = "2.0"
libc = "0.2"
regex = "1"
open = "5"
# Native file picker (markdown "open file" button in the pane tab strip).
# Default features = ["xdg-portal", "wayland"] on Linux: uses the FreeDesktop
# file-chooser portal (no GTK3 runtime dep) and adds Wayland integration so
# the dialog parents to our window. macOS uses NSOpenPanel, Windows uses the
# native COM file-open dialog. `pollster` is pulled in by xdg-portal as the
# tiny block-on executor — keeps the picker runtime-agnostic so we can drive
# `AsyncFileDialog` from `cx.spawn` without a tokio/async-std dep.
rfd = "0.17"
# Markdown viewer pane (US-020 — prd-cmux-port-2026-q2.md). CommonMark + tables
# + strikethrough + footnotes via the event API (we walk events directly into
# a GPUI element tree rather than rendering HTML).
pulldown-cmark = { version = "0.10", default-features = false }
# US-014 of tasks/prd-agents-view.md: syntax highlighting for fenced
# code blocks in chat messages. `default-fancy` ships the bundled
# syntax + theme sets plus the FancyRegex engine (~3 MB binary cost,
# acceptable per the PRD's Technical Considerations section).
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
ureq = { version = "3", features = ["json"] }
# Multi-worktree diff engine (prd-multi-worktree-diff-2026-Q3.md, EP-002).
# Histogram line-diff lifted from Zed's `buffer_diff::compute_hunks`; pinned to
# the same 0.1.8 Zed uses so the ported algorithm matches the reference API.
imara-diff = "0.1.8"

# Diff syntax highlighting (prd-diff-syntax-highlight-2026-Q3.md). Tree-sitter,
# the same engine Zed uses — fast enough (ms-scale parse) that we highlight at
# build time off-thread, no lazy-viewport machinery needed. Core `tree-sitter`
# 0.26 is already a transitive workspace dep (via the Zed fork); grammars below
# all bridge through `tree-sitter-language` 0.1 (LANGUAGE: LanguageFn, ABI 15,
# accepted by the 0.26 runtime). Each grammar compiles bundled C via `cc`.
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"
# Expanded language coverage (prd-diff-syntax-palette-2026-Q3.md, EP-002).
# All bridge through `tree-sitter-language` 0.1 (verified compatible with the
# 0.26 runtime). NOTE: tree-sitter-c / tree-sitter-cpp expose `HIGHLIGHT_QUERY`
# (singular) — every other grammar here uses `HIGHLIGHTS_QUERY` (plural).
# tree-sitter-yaml is the maintained `tree-sitter-grammars` fork (crates.io name
# resolves to it); its highlights query is bundled as a const.
tree-sitter-go = "0.25"   # US-003: P1
tree-sitter-yaml = "0.7"  # US-003: P1
tree-sitter-css = "0.25"  # US-003: P1
tree-sitter-html = "0.23" # US-003: P1
tree-sitter-c = "0.24"    # US-005: P2
tree-sitter-cpp = "0.23"  # US-005: P2
tree-sitter-java = "0.23" # US-005: P2
tree-sitter-ruby = "0.23" # US-005: P2
# QueryCursor::captures returns a StreamingIterator (tree-sitter >= 0.25), not
# a std Iterator.
streaming-iterator = "0.1"
semver = "1"
# `uuid` removed as a direct src-app dep in US-003 — only the telemetry id
# subsystem consumed it, and that lives in `paneflow-telemetry` now. If a
# future non-telemetry caller needs UUID generation, re-add it here.
# Resolve `appimageupdatetool` on $PATH before falling back to download (US-010).
which = "8"
# tar.gz self-update: SHA-256 verification + in-process extraction (US-011).
# The sync `tar` crate guards against absolute paths and `..` traversal by
# default, so we avoid shelling out to /bin/tar.
#
# Pinned to the 0.10 stable line (US-006). 0.11 is a pre-release series and
# a direct 0.11 requirement pulls a second copy of `sha2` into the binary
# when any transitive dep resolves 0.10. We only touch the `Sha256` core API
# (`new`/`update`/`finalize`) which is byte-stable across 0.10 ↔ 0.11, so
# the downgrade is compile-clean.
sha2 = "0.10"
tar = "0.4"
flate2 = "1"

# US-008 — atomic rename for extracted AI-hook binaries
# (`src-app/src/ai_hooks/extract.rs`). `NamedTempFile::persist` wraps
# `rename(2)` on Unix and `MoveFileEx(MOVEFILE_REPLACE_EXISTING)` on
# Windows so the cache-dir publish step is atomic on all three OSes.
tempfile = "3"

# Cross-platform local IPC (US-009 — prd-windows-port.md). Dispatches to Unix
# domain sockets on Linux/macOS and Windows named pipes (`\\.\pipe\...`)
# transparently, so the JSON-RPC newline-delimited protocol is byte-identical
# across platforms.
interprocess = "2"

# Grapheme-cluster boundaries for the cursor-aware TextInput widget
# (widgets/text_input.rs). Already a transitive dep via GPUI, so Cargo
# deduplicates — the direct declaration is only needed to `use` the trait.
unicode-segmentation = "1"

# US-019 (prd-agents-view.md) — composer extensions.
#
# `ignore` is the gitignore-respecting walker used by ripgrep. Powers the
# `@`-mention file completion popup (AC: "recursive, gitignore-respecting,
# debounced 200ms"). Pulled in directly so the agents composer does not have
# to reimplement .gitignore / .ignore / hidden-file filtering by hand.
#
# `base64` encodes image attachments into the ACP `ImageContent.data` field
# (base64 string with a `mime_type` companion). Already a transitive dep
# (rusqlite, ureq, ...), so the explicit declaration only adds the public
# surface, not a new compile unit.
ignore = "0.4"
base64 = "0.22"

# US-116 (prd-agent-ui-refactor-2026-Q3.md): cross-platform desktop
# notifications fired by the agents runtime when a turn ends, refuses,
# or errors out while the panel is not visible+focused. `notify-rust`
# 4.x default feature (`z`/zbus) is pure-Rust on Linux and routes
# through the freedesktop DBus daemon (Wayland + X11). macOS uses the
# Cocoa `NSUserNotificationCenter` (notarized .app required per
# `project_macos_signing`). Windows uses the toast API (Win10/11).
# Keeping the default features avoids the `libdbus-1-dev` system
# build dep that the legacy `d` feature pulls in.
notify-rust = "4"

# US-001 (prd-audit-remediation): detached minisign (Ed25519) signature
# verification — the independent root of trust for the self-updater
# (`update/signature.rs`). Verify-only and pure Rust (no libsodium / C dep),
# so it adds no system build deps and compiles identically on the three
# targets. The matching signing side runs in CI (US-002, `minisign`/`rsign2`).
minisign-verify = "0.2.5"

# Linux: enable Wayland + X11 display backends for gpui_platform
[target.'cfg(target_os = "linux")'.dependencies]
gpui_platform = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix", features = ["wayland", "x11"] }

# macOS: libproc powers detect_ports() (US-006) — walks per-PID socket FDs
# via proc_pidinfo/proc_pidfdinfo wrappers. The macOS-only gate keeps it
# out of the Linux dep closure entirely.
#
# core-text (US-012) powers the Core-Text-backed monospace enumeration in
# fonts.rs — the macOS path no longer shells out to fc-list (which needs
# Homebrew fontconfig). Already a transitive dep via gpui_macos +
# zed-font-kit, so declaring it direct here adds zero compile units; the
# explicit entry just makes the direct use discoverable.
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
core-text = "21"

# Windows: windows-sys powers the TerminateProcess path in TerminalState::drop
# (US-004 — prd-windows-port.md). Feature set kept minimal on purpose: adding
# a new Win32 API elsewhere in the app should require an explicit feature
# append here, not a silent surface expansion. alacritty_terminal 0.26 pulls
# in the same crate at the same version on Windows for its ConPTY path — the
# Cargo resolver deduplicates.
#   - Win32_System_Diagnostics{,_ToolHelp}: US-019 foreground-process naming
#     walks the process tree via CreateToolhelp32Snapshot / Process32{First,Next}W.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    # US-009 (prd-audit-remediation): IsWow64Process2 + IMAGE_FILE_MACHINE_*
    # for native-host arch detection (see past WOW64 emulation on ARM64
    # Windows). IsWow64Process2/GetCurrentProcess live in _Threading above;
    # the IMAGE_FILE_MACHINE_* constants live here.
    "Win32_System_SystemInformation",
    # US-005 (prd-audit-remediation): WinVerifyTrust Authenticode check on the
    # downloaded MSI before msiexec (defense-in-depth over minisign). The
    # WINTRUST_DATA struct is gated on _Cryptography, so both features are
    # required; WINTRUST_FILE_INFO + the WTD_* consts live under _WinTrust.
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
] }
# US-003: process-wide Job Object with KILL_ON_JOB_CLOSE so a kill -9
# of Paneflow (or any uncaught crash) takes all spawned agent CLIs and
# PTY hosts with it. win32job exposes the small subset of Job-Object
# API we actually need (CreateJobObject + SetInformationJobObject +
# AssignProcessToJobObject) with a safe Rust API; reaching for the raw
# windows-sys handles would mean ~80 lines of unsafe glue for the same
# result. Kept Windows-only via the target.cfg gate.
win32job = "2.0.3"

[dev-dependencies]
gpui = { git = "https://github.com/ArthurDEV44/zed", branch = "paneflow/markdown-append-fix", features = ["test-support"] }
# US-001: the sign-capable counterpart to `minisign-verify`. Test-only — used
# to generate ephemeral keypairs and sign fixtures so `update/signature.rs`
# exercises a real verify round-trip (happy path + tampered/wrong-key/no-key
# negatives) without baking a private key into the repo.
minisign = "0.9.1"
tracing-test = "0.2"

# Clippy lint policy (US-007). Mirrors `[workspace.lints.clippy]` in the
# root Cargo.toml EXCEPT the unwrap/expect family is demoted from "warn"
# to "allow" in this crate — src-app has pre-existing calls in GPUI UI code
# where the failure mode is "app crashes" (acceptable for desktop UI) and
# fixing each is out of scope for US-007. New crates (paneflow-ai-hook,
# paneflow-shim, paneflow-config) keep the strict defaults via
# `[lints] workspace = true`.
#
# Follow-up: incremental re-enablement of these three lints in src-app is
# tracked as post-PRD cleanup work. When that lands, remove the `allow`
# overrides below, audit each unwrap site, and re-run `cargo clippy
# --workspace -- -D warnings` to regain the strict gate.
[lints.clippy]
panic = "deny"
unimplemented = "deny"
dbg_macro = "deny"
todo = "warn"
unwrap_used = "allow"
expect_used = "allow"
unwrap_in_result = "allow"

# Windows MSI packaging (US-013 — prd-windows-port.md). Source WXS +
# License.rtf + paneflow.ico live under `packaging/wix/` (kept alongside
# `packaging/{apt,rpm,homebrew,debian}/` per project convention).
# Build: cargo wix build --package paneflow-app --target x86_64-pc-windows-msvc
#
# GUIDs below were generated once by `cargo wix init` and MUST remain
# stable for the lifetime of this product line:
#   * upgrade-guid — the MSI `UpgradeCode` used by `MajorUpgrade` to
#     detect and replace previous installs. Changing it makes new MSIs
#     install alongside the old one instead of upgrading in-place,
#     breaking every existing user's update flow.
#   * path-guid    — the `Path` component GUID controlling the PATH
#     environment-variable entry. Changing it orphans the old entry
#     (it's keyed off the GUID, not the name).
# Both values are also mirrored in packaging/wix/main.wxs — edit in pairs
# if they ever must change (only with a v2.0 product-line cut).
[package.metadata.wix]
wxs = "../packaging/wix/main.wxs"
upgrade-guid = "177D8F43-1642-4212-9CB0-FD14B299058D"
path-guid = "49700ADE-7E1B-466E-A25E-A138A2FC96F3"
# MSI filename root: `paneflow-<version>-<arch>.msi`. Matches the
# `AssetFormat::Msi` matcher suffix from US-011
# (`-x86_64-pc-windows-msvc.msi`).
name = "paneflow"

# Debian packaging (US-003) — explicit deps, never `$auto` (cargo-deb issue #170).
# Build: cargo deb -p paneflow-app --target x86_64-unknown-linux-gnu
[package.metadata.deb]
name = "paneflow"
maintainer = "Arthur Jean <arthur.jean@strivex.fr>"
copyright = "2025 Arthur Jean"
license-file = ["../LICENSE", "0"]
changelog = "../debian/changelog"
section = "utils"
priority = "optional"
revision = "1"
# Debian maintainer scripts: `packaging/debian/` contains `postinst` (wires
# the pkg.paneflow.dev apt source on first install; US-016). The directory
# path is resolved relative to THIS Cargo.toml (cargo-deb convention —
# differs from cargo-generate-rpm below, which resolves relative to the
# workspace root). cargo-deb auto-sets 755 on all control scripts.
maintainer-scripts = "../packaging/debian"
depends = "libc6, libxcb1, libxkbcommon0, libxkbcommon-x11-0, libx11-6, libvulkan1, libfontconfig1, libfreetype6"
extended-description = """\
PaneFlow is a native Rust terminal workspace for running coding agents in
parallel. Launch Claude Code, Codex, opencode, Pi, and other CLI agents in real
panes; keep each session visible; and see when one needs input.

Features horizontal and vertical split panes with drag-to-resize (up to 32
panes), branch-aware workspaces with session restore, in-app Git diffs and
agent review prompts, an MCP bridge for pane reading, configurable keybindings,
and JSON-RPC 2.0 IPC for local automation. The Linux package supports both
Wayland and X11."""
assets = [
    ["target/release/paneflow", "usr/bin/", "755"],
    ["../assets/paneflow.desktop", "usr/share/applications/paneflow.desktop", "644"],
    ["../assets/icons/paneflow-16.png",  "usr/share/icons/hicolor/16x16/apps/paneflow.png",     "644"],
    ["../assets/icons/paneflow-32.png",  "usr/share/icons/hicolor/32x32/apps/paneflow.png",     "644"],
    ["../assets/icons/paneflow-48.png",  "usr/share/icons/hicolor/48x48/apps/paneflow.png",     "644"],
    ["../assets/icons/paneflow-128.png", "usr/share/icons/hicolor/128x128/apps/paneflow.png",   "644"],
    ["../assets/icons/paneflow-256.png", "usr/share/icons/hicolor/256x256/apps/paneflow.png",   "644"],
    ["../assets/icons/paneflow-512.png", "usr/share/icons/hicolor/512x512/apps/paneflow.png",   "644"],
    ["../assets/io.github.arthurdev44.paneflow.metainfo.xml", "usr/share/metainfo/io.github.arthurdev44.paneflow.metainfo.xml", "644"],
]

# RPM packaging (US-014) — mirrors the Debian asset list plus an explicit
# LICENSE entry (on the deb side LICENSE comes in via `license-file`, not
# the `assets` array). Built by cargo-generate-rpm 0.20.0:
# `cargo generate-rpm -p src-app --target x86_64-unknown-linux-gnu`.
# (Note: `-p src-app` is the DIRECTORY path — cargo-generate-rpm 0.20.0
# resolves `-p` strictly as a path, not the crate name `paneflow-app`.)
#
# - Asset `source` paths are resolved relative to the workspace root by
#   cargo-generate-rpm 0.20.0, NOT to this Cargo.toml's directory — hence
#   `assets/` rather than `../assets/`. The special `target/release/*`
#   prefix is auto-rewritten to the `--target` output directory.
# - `auto-req = "no"` mirrors the reason we avoid `$auto` in cargo-deb
#   (over-collection; issue #170 in cargo-deb). The explicit `requires`
#   table below is the single source of truth for runtime deps on Fedora/
#   RHEL/Rocky/openSUSE.
# - `%license` is NOT a supported asset tag in cargo-generate-rpm 0.20.0
#   (the crate exposes `doc` but not `license`). The LICENSE file is
#   therefore installed with `%doc` instead — functionally equivalent for
#   `rpm -qlp` inspection, but upstream RPM purists note the distinction.
#   If we ever move to `rpmbuild`, restore the `%license` tag.
[package.metadata.generate-rpm]
# Override the RPM NAME to `paneflow` (dropping the `-app` suffix of the
# crate itself). Keeps the artifact filename in sync with both cargo-deb
# (which also renames to `paneflow`) and the `update_checker` asset
# picker, which matches on the literal `paneflow-<version>-<arch>.rpm`.
name = "paneflow"
release = "1"
auto-req = "no"
# RPM `%post` scriptlet: wires /etc/yum.repos.d/paneflow.repo on first
# install (US-016). Path is resolved relative to the workspace root
# (cargo-generate-rpm's path-resolution convention — differs from the
# crate-relative `maintainer-scripts` above).
post_install_script = "packaging/rpm/postinst.sh"
# RPM `%preun` scriptlet: removes /etc/yum.repos.d/paneflow.repo on full
# uninstall only ($1 == 0). On upgrades ($1 >= 1) the file must stay so
# `dnf check-update` keeps seeing pkg.paneflow.dev.
pre_uninstall_script = "packaging/rpm/preun.sh"
# RPM `%postun` scriptlet: refreshes the freedesktop icon + desktop
# caches after the package payload is removed, so stale
# /usr/share/icons/hicolor/*/apps/paneflow.png cache entries and the
# removed paneflow.desktop stop being surfaced by GNOME Shell / KDE
# Plasma. Idempotent on upgrades; load-bearing on final uninstall.
post_uninstall_script = "packaging/rpm/postun.sh"
assets = [
    { source = "target/release/paneflow",                                       dest = "/usr/bin/paneflow",                                                         mode = "755" },
    { source = "assets/paneflow.desktop",                                       dest = "/usr/share/applications/paneflow.desktop",                                  mode = "644" },
    { source = "assets/icons/paneflow-16.png",                                  dest = "/usr/share/icons/hicolor/16x16/apps/paneflow.png",                          mode = "644" },
    { source = "assets/icons/paneflow-32.png",                                  dest = "/usr/share/icons/hicolor/32x32/apps/paneflow.png",                          mode = "644" },
    { source = "assets/icons/paneflow-48.png",                                  dest = "/usr/share/icons/hicolor/48x48/apps/paneflow.png",                          mode = "644" },
    { source = "assets/icons/paneflow-128.png",                                 dest = "/usr/share/icons/hicolor/128x128/apps/paneflow.png",                        mode = "644" },
    { source = "assets/icons/paneflow-256.png",                                 dest = "/usr/share/icons/hicolor/256x256/apps/paneflow.png",                        mode = "644" },
    { source = "assets/icons/paneflow-512.png",                                 dest = "/usr/share/icons/hicolor/512x512/apps/paneflow.png",                        mode = "644" },
    { source = "assets/io.github.arthurdev44.paneflow.metainfo.xml",            dest = "/usr/share/metainfo/io.github.arthurdev44.paneflow.metainfo.xml",           mode = "644" },
    { source = "LICENSE",                                                       dest = "/usr/share/doc/paneflow/LICENSE",                                           mode = "644", doc = true },
]

# Cross-distro RPM runtime deps. All entries use SONAME virtual provides
# instead of package names, because package nomenclature differs between
# Fedora/RHEL/Rocky and openSUSE:
#
#   Fedora/RHEL          openSUSE Tumbleweed
#   ───────────────────  ─────────────────────
#   vulkan-loader        libvulkan1
#   libxkbcommon         libxkbcommon0
#   libxkbcommon-x11     libxkbcommon-x11-0
#   fontconfig           fontconfig (same)
#   freetype             libfreetype6
#
# Every package above exports the same SONAME virtual provide regardless
# of its package name, so listing the SONAMEs gives us one cross-distro
# requires-set that resolves on Fedora 30+, RHEL 8+, Rocky, Mageia,
# openSUSE Leap 15+, and openSUSE Tumbleweed without per-distro fan-out.
# The `(64bit)` ABI tag is correct for both x86_64 and aarch64 RPM
# builds — it indicates the 64-bit ABI, not CPU arch (i686 would use
# `(32bit)`). Verified against pkgs.org SONAME lookup for each library.
[package.metadata.generate-rpm.requires]
"libvulkan.so.1()(64bit)" = "*"
"libxkbcommon.so.0()(64bit)" = "*"
"libxkbcommon-x11.so.0()(64bit)" = "*"
"libfontconfig.so.1()(64bit)" = "*"
"libfreetype.so.6()(64bit)" = "*"
