[package]
name = "paneflow-app"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
paneflow-core.workspace = true
paneflow-terminal = { path = "../crates/paneflow-terminal" }
paneflow-ipc = { path = "../crates/paneflow-ipc" }
paneflow-config = { path = "../crates/paneflow-config" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
