[package]
name = "paneflow-ai-hook"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "paneflow-ai-hook"
path = "src/main.rs"

[dependencies]
interprocess = "2.4"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
