[package]
name = "paneflow-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "paneflow-app"
path = "src/main.rs"

[dependencies]
paneflow-core.workspace = true
paneflow-terminal.workspace = true
paneflow-ipc.workspace = true
paneflow-config.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

iced = { version = "0.13", features = ["wgpu", "tokio", "canvas"] }
alacritty_terminal = "0.26.0-rc1"
vte = "0.13"
nucleo = "0.5"
arboard = "3"
