[package]
name = "paneflow-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "paneflow"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
