[package]
name = "paneflow-ipc-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Blocking JSON-RPC client for Paneflow's local IPC socket (shared by the MCP bridge and the CLI)"

[dependencies]
interprocess = "2.4"
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
