[package]
name = "paneflow-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
paneflow-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
