[package]
name = "paneflow-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
paneflow-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
