[package]
name = "paneflow-mcp-install"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU-free install engine for the Paneflow MCP bridge: per-agent detection, idempotent config merge/backup/atomic-write primitives, and the `paneflow mcp install|uninstall|status` orchestrator."

[dependencies]
# `preserve_order` keeps an agent config's existing key order on merge
# (IndexMap, not the default sorted BTreeMap), so `paneflow mcp install`
# appends the `paneflow` entry without rewriting the user's whole file
# alphabetically — minimal-diff writes into ~/.claude.json etc. Cargo
# feature unification propagates this to paneflow-app's serde_json too
# (harmless: JSON object key order is not semantically meaningful).
serde_json = { workspace = true, features = ["preserve_order"] }
# Format-preserving TOML editing (comments + key order) for Codex's
# `~/.codex/config.toml`. Kept OUT of the embedded `paneflow-mcp` bridge
# binary (PRD D3): this crate links only into `paneflow-app`, never into
# the size-budgeted bridge.
toml_edit = "0.22"
# Match the versions already compiled in the src-app dep graph so this
# crate adds no new transitive build (src-app pins which 8; dirs 6 matches
# paneflow-acp). PRD: `which` is "déjà utilisé dans le workspace".
which = "8"
dirs = "6"
anyhow = "1"
# Surfaces shell-out failures (e.g. `claude mcp add` non-zero exit) to
# stderr via the host's env_logger before the direct-merge fallback runs.
log = "0.4"
# Used by `io::write_atomic` for same-dir temp file + atomic rename (not
# test-only), so it lives in [dependencies], not [dev-dependencies].
tempfile = "3"
# EP-002 (prd-ultron-remediation, U-032): bound `claude mcp add` / `codex mcp
# add` shell-outs with a wall-clock deadline. std-only, no transitive build.
paneflow-process = { workspace = true }

[lints]
workspace = true
