[package]
name = "paneflow-shim"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "paneflow-shim"
path = "src/main.rs"

[dependencies]
# US-005: idempotent merge of `.claude/settings.local.json` + atomic rename.
serde_json = { workspace = true }
tempfile = "3"
# Cross-platform file identity for the hardlink loop guard.
same-file = "1"

# Signal disposition control — required to make Ctrl+C / SIGHUP / SIGTERM
# only reach the child claude/codex process (so the AI sees the
# interrupt) while the shim survives long enough to send `ai.session_end`
# to PaneFlow's IPC server. Same pattern time(1) / tee(1) / sudo(8) use.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows: a console-control handler emits `ai.stop` when the user Ctrl+C's an
# agent that interrupts its turn WITHOUT exiting (claude/codex fire no Stop hook
# then), mirroring the Unix `sigwait` watcher so the sidebar loader never sticks
# (EP-005 US-017). `ctrlc` is already this workspace's cross-platform Ctrl+C
# crate (used by paneflow-app), wrapping `SetConsoleCtrlHandler` safely.
[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[lints]
workspace = true
