[package]
name = "paneflow-threads"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thread persistence layer for Paneflow's Agents view: SQLite-backed store of zstd-compressed JSON message blobs, atomic writes, cross-platform DB path resolution, and corrupted-DB recovery."

[dependencies]
# Message types reference ACP's ContentBlock so the persistence format
# mirrors the wire shape -- no extra translation step in the UI layer.
agent-client-protocol = "0.12"

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"

# Cross-platform paths. Matches paneflow-config's pin (US-006 ACs spec
# `dirs::data_dir()` for the default DB location).
dirs = "6"

# rusqlite with bundled SQLite for cross-platform parity: avoids the
# Windows MSVC system-libsqlite linkage issue flagged in the PRD's
# Technical Considerations. `backup` is needed for the corruption-recovery
# test fixtures; `blob` exposes the streaming BLOB API rusqlite uses for
# the `data` column.
rusqlite = { version = "0.32", features = ["bundled"] }

# Compression for the JSON BLOB column. Level 3 is the PRD-specified
# default (US-006 AC). `zstd` 0.13 still vendors the C library through
# `zstd-sys`; that builds cleanly on Linux, macOS, and Windows MSVC.
zstd = "0.13"

# Deterministic random IDs for `ThreadId`. v4 is plenty -- we don't need
# time-ordered (`updated_at DESC` handles sidebar ordering).
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
